--- a/PokeAPI/View/Cells/CategoryCell.xib
+++ b/PokeAPI/View/Cells/CategoryCell.xib
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -12,34 +11,25 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CategoryCell" id="2u0-gd-UbC" customClass="CategoryCell" customModule="PokeAPI" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="173" height="87"/>
+            <rect key="frame" x="0.0" y="0.0" width="305" height="112"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="a3Y-NI-9fb">
-                <rect key="frame" x="0.0" y="0.0" width="173" height="87"/>
+                <rect key="frame" x="0.0" y="0.0" width="305" height="112"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5St-7O-aot">
-                        <rect key="frame" x="0.0" y="0.0" width="173" height="87"/>
+                        <rect key="frame" x="0.0" y="0.0" width="305" height="112"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Repostería &amp; Postres Repostería &amp; Postres" textAlignment="center" lineBreakMode="middleTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="W5p-Tx-IxW">
-                                <rect key="frame" x="10" y="0.0" width="153" height="87"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="145" id="cdt-vs-JzU"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="NotoSansMyanmar-Bold" family="Noto Sans Myanmar" pointSize="21"/>
-                                <color key="textColor" systemColor="systemGray2Color"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="circlebadge.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="iPe-XR-40I">
+                                <rect key="frame" x="8" y="31.5" width="16" height="56"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MVO-3i-tlz">
+                                <rect key="frame" x="211" y="20" width="83" height="72"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstItem="W5p-Tx-IxW" firstAttribute="centerY" secondItem="5St-7O-aot" secondAttribute="centerY" id="DSu-ge-dkx"/>
-                            <constraint firstItem="W5p-Tx-IxW" firstAttribute="top" secondItem="5St-7O-aot" secondAttribute="top" id="GqX-bk-Igl"/>
-                            <constraint firstAttribute="trailing" secondItem="W5p-Tx-IxW" secondAttribute="trailing" constant="10" id="HHe-V2-ysC"/>
-                            <constraint firstItem="W5p-Tx-IxW" firstAttribute="centerX" secondItem="5St-7O-aot" secondAttribute="centerX" id="Ynk-on-5nb"/>
-                            <constraint firstItem="W5p-Tx-IxW" firstAttribute="leading" secondItem="5St-7O-aot" secondAttribute="leading" constant="10" id="bOL-U8-V1d"/>
-                            <constraint firstAttribute="bottom" secondItem="W5p-Tx-IxW" secondAttribute="bottom" id="zOb-Yj-HKR"/>
-                        </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                 <integer key="value" value="15"/>
@@ -54,18 +44,14 @@
                     <constraint firstItem="5St-7O-aot" firstAttribute="top" secondItem="a3Y-NI-9fb" secondAttribute="top" id="fJn-Tb-RzA"/>
                 </constraints>
             </collectionViewCellContentView>
-            <size key="customSize" width="173" height="87"/>
+            <size key="customSize" width="305" height="112"/>
             <connections>
                 <outlet property="container" destination="5St-7O-aot" id="RUB-k6-pwd"/>
-                <outlet property="title" destination="W5p-Tx-IxW" id="SRe-pZ-Hgf"/>
-                <outlet property="titleHeight" destination="cdt-vs-JzU" id="EwH-hU-3vi"/>
             </connections>
-            <point key="canvasLocation" x="207.97101449275365" y="53.236607142857139"/>
+            <point key="canvasLocation" x="303.62318840579712" y="61.607142857142854"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <systemColor name="systemGray2Color">
-            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <image name="circlebadge.fill" catalog="system" width="128" height="120"/>
     </resources>
 </document>
