--- a/MyMessages/View/MyMessages.storyboard
+++ b/MyMessages/View/MyMessages.storyboard
@@ -144,22 +144,12 @@
                         <outlet property="reloadData" destination="8wW-6w-chj" id="8ZK-ji-ajK"/>
                         <outlet property="segmentedControl" destination="2c0-e3-Zxr" id="uup-ua-cLt"/>
                         <outlet property="tableView" destination="NSa-Xs-Wax" id="z5n-WY-aAH"/>
-                        <segue destination="n10-XG-Lgg" kind="show" identifier="toDetail" id="HZE-8g-ycH"/>
+                        <segue destination="UJz-pa-PsY" kind="show" identifier="toDetail" id="g1x-Kt-Dnd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1942.0289855072465" y="59.598214285714285"/>
-        </scene>
-        <!--DetailItem-->
-        <scene sceneID="Rge-CI-eac">
-            <objects>
-                <viewControllerPlaceholder storyboardName="DetailItem" id="n10-XG-Lgg" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="SeE-W5-r9i"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="XrO-hk-qV7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2569" y="60"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ODH-FB-LY3">
@@ -179,6 +169,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kI7-Kt-LP0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1031.8840579710145" y="59.598214285714285"/>
+        </scene>
+        <!--DetailItem-->
+        <scene sceneID="oEe-5x-nLl">
+            <objects>
+                <viewControllerPlaceholder storyboardName="DetailItem" id="UJz-pa-PsY" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="BLx-JH-9kh"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cLM-2w-Q4C" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2990" y="65"/>
         </scene>
     </scenes>
     <color key="tintColor" systemColor="systemGreenColor"/>
