--- a/MyMessages/View/Cells/PostDataCell.xib
+++ b/MyMessages/View/Cells/PostDataCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -40,6 +40,14 @@
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="starFill" translatesAutoresizingMaskIntoConstraints="NO" id="20U-uE-Bbu">
+                        <rect key="frame" x="10" y="42" width="17" height="17"/>
+                        <color key="tintColor" systemColor="systemYellowColor"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="17" id="P3N-Gx-r93"/>
+                            <constraint firstAttribute="height" constant="17" id="mq7-sv-6hS"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="lsM-o7-Lda" secondAttribute="bottom" constant="10" id="1Q3-2k-Wmk"/>
@@ -47,7 +55,9 @@
                     <constraint firstItem="g6e-NX-0Hv" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="58Z-Ug-pQz"/>
                     <constraint firstItem="g6e-NX-0Hv" firstAttribute="leading" secondItem="lsM-o7-Lda" secondAttribute="trailing" constant="10" id="Sae-bQ-3LT"/>
                     <constraint firstItem="QKQ-Sf-6VS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="dgL-Ul-L8n"/>
+                    <constraint firstItem="20U-uE-Bbu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="hOb-KG-aQg"/>
                     <constraint firstAttribute="trailing" secondItem="g6e-NX-0Hv" secondAttribute="trailing" constant="10" id="lL1-Uv-Joo"/>
+                    <constraint firstItem="20U-uE-Bbu" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="lZ4-m0-DVO"/>
                     <constraint firstItem="QKQ-Sf-6VS" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="oqA-sA-CUM"/>
                     <constraint firstItem="lsM-o7-Lda" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="vqe-dM-Nme"/>
                 </constraints>
@@ -55,6 +65,8 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="descriptionLabel" destination="lsM-o7-Lda" id="vCF-Dz-R5K"/>
+                <outlet property="dotImage" destination="QKQ-Sf-6VS" id="XkG-e8-xNB"/>
+                <outlet property="starImaage" destination="20U-uE-Bbu" id="acI-OH-AHL"/>
             </connections>
             <point key="canvasLocation" x="149.27536231884059" y="101.45089285714285"/>
         </tableViewCell>
@@ -62,8 +74,12 @@
     <resources>
         <image name="arrowRight" width="170.5" height="170.5"/>
         <image name="circlebadge.fill" catalog="system" width="128" height="120"/>
+        <image name="starFill" width="20" height="20"/>
         <systemColor name="linkColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
