--- a/MeowMeow/View/Home.storyboard
+++ b/MeowMeow/View/Home.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="EhT-u6-eTL">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -9,25 +9,133 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--HomeVC-->
-        <scene sceneID="s0d-6b-0kx">
+        <!--🐈-->
+        <scene sceneID="4FD-wy-6uC">
             <objects>
-                <viewController storyboardIdentifier="Home" id="Y6W-OH-hqX" customClass="HomeVC" customModule="MeowMeow" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
+                <viewController storyboardIdentifier="Home" id="RDu-t0-JPj" customClass="HomeVC" customModule="MeowMeow" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="DwV-ze-D5x">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mpy-oo-j1m">
+                                <rect key="frame" x="122" y="768" width="170" height="44"/>
+                                <color key="tintColor" systemColor="systemIndigoColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="tinted" title="My Reactions">
+                                    <fontDescription key="titleFontDescription" style="UICTFontTextStyleTitle1"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <segue destination="fdP-dX-5NR" kind="show" id="hxC-g3-bf1"/>
+                                </connections>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="zmK-bT-nyn">
+                                <rect key="frame" x="78" y="265.5" width="258" height="365"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="atom" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="mwt-iY-eg9">
+                                        <rect key="frame" x="8" y="-1.5" width="250" height="252.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="250" id="CCM-SM-d2Q"/>
+                                            <constraint firstAttribute="width" constant="250" id="jPO-ql-99Q"/>
+                                        </constraints>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="58" translatesAutoresizingMaskIntoConstraints="NO" id="jZv-mD-kEF">
+                                        <rect key="frame" x="0.0" y="265" width="258" height="100"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1ef-LL-8GC">
+                                                <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="100" id="810-mC-0uy"/>
+                                                    <constraint firstAttribute="width" constant="100" id="HdM-sR-fkA"/>
+                                                </constraints>
+                                                <color key="tintColor" systemColor="systemGreenColor"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" image="like"/>
+                                                <connections>
+                                                    <action selector="LikeAction:" destination="RDu-t0-JPj" eventType="touchUpInside" id="gD5-u5-8dP"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KVO-Pr-7i1">
+                                                <rect key="frame" x="158" y="0.0" width="100" height="100"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="100" id="6N7-pW-MBx"/>
+                                                    <constraint firstAttribute="height" constant="100" id="aTV-9r-hhc"/>
+                                                </constraints>
+                                                <color key="tintColor" systemColor="systemRedColor"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" image="dislike"/>
+                                                <connections>
+                                                    <action selector="DislikeAction:" destination="RDu-t0-JPj" eventType="touchUpInside" id="w9a-cf-txd"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="YLD-t5-MTn"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="zmK-bT-nyn" firstAttribute="centerY" secondItem="DwV-ze-D5x" secondAttribute="centerY" id="DWw-gv-duk"/>
+                            <constraint firstItem="mpy-oo-j1m" firstAttribute="centerX" secondItem="DwV-ze-D5x" secondAttribute="centerX" id="X3O-6j-HIR"/>
+                            <constraint firstItem="zmK-bT-nyn" firstAttribute="centerX" secondItem="DwV-ze-D5x" secondAttribute="centerX" id="ehE-NJ-Lfk"/>
+                            <constraint firstItem="YLD-t5-MTn" firstAttribute="bottom" secondItem="mpy-oo-j1m" secondAttribute="bottom" constant="50" id="gYc-jN-nF4"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="🐈" id="VAc-vx-gGF"/>
+                    <connections>
+                        <outlet property="catImage" destination="mwt-iY-eg9" id="FIf-DT-Xnk"/>
+                        <outlet property="dislikeButton" destination="KVO-Pr-7i1" id="wHh-kp-Yq7"/>
+                        <outlet property="likeButton" destination="1ef-LL-8GC" id="fJW-H8-sDH"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qrf-tu-vGm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="20" y="89"/>
+            <point key="canvasLocation" x="2150.7246376811595" y="-7.3660714285714279"/>
+        </scene>
+        <!--MeowMeow-->
+        <scene sceneID="LHX-U8-jiY">
+            <objects>
+                <viewControllerPlaceholder storyboardName="MeowMeow" id="fdP-dX-5NR" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="9lk-MW-qZ9"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gHG-e5-wd0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2813.768115942029" y="-7.3660714285714279"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="nBa-UG-Bjc">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="EhT-u6-eTL" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="cHF-Rn-gR4">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="RDu-t0-JPj" kind="relationship" relationship="rootViewController" id="gdw-Rw-CqT"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="37Z-6m-GSd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1240.5797101449277" y="-7.3660714285714279"/>
         </scene>
     </scenes>
     <resources>
+        <image name="atom" catalog="system" width="119" height="128"/>
+        <image name="dislike" width="40" height="40"/>
+        <image name="like" width="40" height="40"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemIndigoColor">
+            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
